Portuguese Version - Publish 2.0

--- a/Articles/english.ipynb
+++ b/Articles/english.ipynb
@@ -56,7 +56,6 @@
    "cell_type": "markdown",
    "id": "55ccb06e-bf7a-4d70-baf9-2fa41a850090",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "09d9a241-c495-48b6-bc52-763cf8248fc2",
    "metadata": {
     "tags": []
@@ -379,7 +378,7 @@
        "Russian Federation                                 128.0               120"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,8 +391,11 @@
     "data['RANKING (GLOBAL)'] = np.arange(1, len(data)+1)\n",
     "\n",
     "most_aff = data.loc[most_aff_vacs.index]\n",
+    "most_aff.sort_values('TOTAL_VACCINATIONS_PER100', ascending=False, inplace=True)\n",
+    "\n",
     "most_aff.rename(columns={'TOTAL_VACCINATIONS_PER100': 'TOTAL VACCINATIONS PER HUNDRED'}, inplace=True)\n",
-    "most_aff.sort_values('TOTAL VACCINATIONS PER HUNDRED', ascending=False)"
+    "\n",
+    "most_aff"
    ]
   },
   {
